<resources>
    <string-array name="acerca_de">
        <item>Nature App</item>
        <item>An app to explore nature in your area</item>
        <item>Version 1.0.1</item>
        <item>Developed by Jesús Velasco</item>
        <item>Contact: alexvelas23@gmail.com</item>
    </string-array>
    <string name="app_name">Nature App</string>
    <string name="app_description">An app to explore nature in your area</string>
    <string name="version">Version 1.0.1</string>
    <string name="developer">Developed by Jesús Velasco</string>
    <string name="contact">Contact: alexvelas23@gmail.com</string>

    <string name="nature">Nature</string>
    <string name="search_hint">Search for a route…</string>
    <string name="explore">Explore</string>
    <string name="elijeActividad">Choose your activity:</string>
    <string name="selecionaste">You selected:</string>
    <string name="error_seleccion">Please, select a valid option</string>
    <string-array name="tipos_actividad">
        <item>Select a valid option:</item>
        <item>Hiking</item>
        <item>Cycling</item>
        <item>Swimming</item>
    </string-array>
    <string name="nombre">Name:</string>
    <string name="descripcion">Description:</string>
    <string name="distancia">Distance:</string>
    <string name="dificultad">Difficulty:</string>
    <string name="duracion">Duration:</string>
    <string name="minutos">minutes</string>
    <string name="consejos">Advices</string>
    <string name="back">Back</string>
    <string name="webpageaccess">WebPageAccess</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="sumario_notificaciones">Get notifications about new routes</string>
    <string name="habilitar_notificaciones">Set on notifications</string>
    <string name="introduce_usuario">Introduce your user name</string>
    <string name="nombre_de_usuario">User name</string>
    <string-array name="consejos_senderismo">
        <item> - Carry enough water to stay hydrated.</item>
        <item> - Wear proper footwear to prevent injuries.</item>
        <item> - Check the weather forecast before heading out.</item>
    </string-array>
    <string name="usuario">User</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="ruta_bosque">Forest Route</string>
    <string name="ruta_montania">Mountain Route</string>
    <string name="ruta_lago">Lake Route</string>
    <string name="desc_montana">Challenging route in the mountains</string>
    <string name="dif_dificil">Hard</string>
    <string name="desc_lago">Route around a lake</string>
    <string name="dif_moderada">Moderate</string>
    <string name="desc_bosque">Beautiful route in the forest</string>
    <string name="dif_facil">Easy</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="no_hay_rutas_disponibles">No routes avaliable</string>
    <string name="agregar_ruta">Add route</string>
    <string name="pantalla_en_desarrollo">View in development</string>
    <string name="you_selected_hiking">You selected hiking</string>
    <string name="you_selected_cycling">You selected Cycling</string>
    <string name="you_selected_swimming">You selected Swimming</string>
    <string name="km">" km"</string>
    <string name="webpage_github">https://github.com/javelascot01/ProyectoMoviles</string>
    <string name="nigth_theme">Nigth Theme</string>
    <string name="enable_night_theme">Enable Night Theme</string>
    <string name="desea_a_adir_la_ruta">Do you want to add the route?</string>
    <string name="ver_detalle">Details</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="advices">Advices</string>
    <string name="user_admin">User: admin</string>
    <string name="password_admin">Password: admin</string>
    <string name="information">Information</string>
    <string name="default_values">Default values:</string>
    <string name="accept">Accept</string>
    <string name="default_web_client_id">337038116971-9lgg0d6f348tt3ii8693i8jjvc9r8tgb.apps.googleusercontent.com</string>
</resources>